--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,8 +32,7 @@ jobs:
     - name: Create large test file
       run: |
         echo "Creating ${{ github.event.inputs.file_size_gb }}GB test file..."
-        SIZE_KB=$(echo "${{ github.event.inputs.file_size_gb }} * 1024 * 1024" | bc)
-        echo ${SIZE_KB}
+        SIZE_KB=$(echo "${{ github.event.inputs.file_size_gb }} * 1024 * 1024 / 1" | bc | )
         dd if=/dev/zero of=bigFile.txt bs=1024 count=${SIZE_KB}
         ls -lh bigFile.txt
     
